--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
   },
   "homepage": "https://github.com/alphakevin/unoconv-server#readme",
   "dependencies": {
-    "async-middleware": "^1.2.1",
-    "content-disposition": "^0.5.2",
-    "express": "^4.16.2",
-    "lodash": "^4.17.4",
-    "mime-types": "^2.1.17",
-    "multer": "^1.3.0",
-    "pad": "^2.0.3",
-    "uuid": "^3.1.0"
+    "async-middleware": "1.2.1",
+    "content-disposition": "0.5.2",
+    "express": "4.16.2",
+    "lodash": "4.17.4",
+    "mime-types": "2.1.17",
+    "multer": "1.3.0",
+    "pad": "2.0.3",
+    "uuid": "3.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.14.3"
+    "nodemon": "^1.19.4"
   }
 }
